--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -58,6 +58,16 @@ div.container {
     width: 100%;
     height: 100%;
     background: white;
+    box-shadow: 5px 5px 13px rgba(0, 0, 0, 0.5), -5px -5px 13px rgba(0, 0, 0, 0.5) ;
+    transition: scale 0.2s, box-shadow 0.2s;
+}
+
+.card:hover {
+    -ms-transform: scale(0.98,0.98); /* IE 9 */
+    -webkit-transform: scale(0.98,0.98); /* Safari */
+    transform: scale(0.98,0.98); /* Standard syntax */
+    box-shadow: 3px 3px 11px rgba(0, 0, 0, 0.55), -3px -3px 11px rgba(0, 0, 0, 0.55) ;
+
 }
 
 .taken {
