--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -13,12 +13,12 @@
 <body>
     <header>
         <div class="header">
-            <h1><a href="index.html">Pexeso</a></h1>
+            <h1><a href="index.html" th:href=".">Pexeso</a></h1>
         </div>
     </header>
 
     <main>
-        <div th:if="${currentBoard.status == T(cz.czechitas.webapp.entity.GameStatus).GAME_FINISHED}" class="finished">
+        <div th:if="${currentBoard.stav == T(cz.czechitas.webapp.entity.StavHry).KONEC}" class="finished">
             <h2>konec hry</h2>
             <p>
                 <a th:href="newtable.html" href="table.html">Začít novou hru</a>
@@ -37,7 +37,7 @@
                            th:name="${'clickedCard' + card.cardNumber}"/>
                     <input class="card" type="image"
                            th:if="${card.status == T(cz.czechitas.webapp.entity.CardStatus).BACK}"
-                           th:src="${'images/rub.png'}"
+                           th:src="${'images/back.jpg'}"
                            th:name="${'clickedCard' + card.cardNumber}"/>
                     <img class="taken"
                          th:if="${card.status == T(cz.czechitas.webapp.entity.CardStatus).TAKEN}"
