--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -18,7 +18,7 @@
     </header>
 
     <main>
-        <div th:if="${currentBoard.stav == T(cz.czechitas.webapp.entity.StavHry).KONEC}" class="finished">
+        <div th:if="${currentBoard.status == T(cz.czechitas.webapp.entity.GameStatus).GAME_FINISHED}" class="finished">
             <h2>konec hry</h2>
             <p>
                 <a th:href="newtable.html" href="table.html">Začít novou hru</a>
