--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -12,6 +12,13 @@ body {
     color: #a4c2a2;
 }
 
+.page {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+}
+
 .header {
     width: 100%;
     text-align: center;
@@ -31,7 +38,6 @@ h1 {
 
 main {
     width: 100%;
-    margin-bottom: 100px;
     text-align: center;
 }
 
@@ -76,27 +82,15 @@ div.container {
     height: 100%;
 }
 
-footer {
-    position: absolute;
-    width: 100vw;
-    bottom: 0;
-}
-
 .footer {
-    position:relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100px;
     padding: 0;
     margin: 0;
-    text-align: center;
     background: #2a2b2e;
-}
-
-.footer p {
-    position: relative;
-    top: 50%;
-    margin: 0;
-    margin-top: -2em;
 }
 
 .footer a {
